--- a/about.html
+++ b/about.html
@@ -13,10 +13,11 @@
           <a class="a" href="index.html">HOME</a>
           <a class="b active"  href="about.html">ABOUT ME</a>
           <a class="c"  href="portfolio.html">PORTFOLIO</a>
-          <a class="d"  href="#">CONTACT ME</a>
+          <a class="d"  href="contacts.html">CONTACT ME</a>
   </div>
    <div class="contents">
-      <h1> WELCOME<br>My name is Phethehile molefe.I was born and raised in Katlehong also known as K1</h1>
+      <h2> WELCOME<br>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit,<br> sed do eiusmod tempor incididunt<br> ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam,<br> quis nostrud exercitation ullamco <br>laboris nisi ut aliquip ex ea commodo consequat.<br> Duis aute irure dolor in reprehenderit<br> in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br> Excepteur sint occaecat cupidatat non proident,<br> sunt in culpa qui officia deserunt<br> mollit anim id est laborum.
+      </h2>
 
 
   <script type="text/javascript">
