--- a/contacts.html
+++ b/contacts.html
@@ -9,17 +9,17 @@
 <body>
   <div class="background">
     <div class="logo"><img src="images/FB_IMG_1552678366249.jpg"></div>
-    
+    <div class="pic"><img src="images8.png"><div/>
 
     <div class="nav">
-            <a class="a active" href="index.html">HOME</a>
+            <a class="a" href="index.html">HOME</a>
             <a class="b"  href="about.html">ABOUT ME</a>
             <a class="c"  href="portfolio.html">PORTFOLIO</a>
-            <a class="d"  href="contacts.html">CONTACT ME</a>
+            <a class="d active"  href="contacts.html">CONTACT ME</a>
     </div>
 
     <div class="contents">
-      <h1> "She is black excellence,<br>she is me.<br>Black without apology""</h1>
+      <h1> </h1>
     </div>
   </div>
 
