--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,13 @@
 </head>
 <body>
   <div class="portfolio">
+      <div class="picture"><img src="images/images8.png"></div>
 
   <div class="nav">
           <a class="a " href="background">HOME</a>
           <a class="b"  href="about.html">ABOUT ME</a>
-          <a class="c active"  href="#">PORTFOLIO</a>
-          <a class="d"  href="#">CONTACT ME</a>
+          <a class="c active"  href="portfolio.html">PORTFOLIO</a>
+          <a class="d"  href="contacts.html">CONTACT ME</a>
   </div>
   </div>
 
