made some changes

--- a/about.html
+++ b/about.html
@@ -9,15 +9,26 @@
 <body>
   <div class="about">
 
-  <div class="nav">
-          <a class="a" href="index.html">HOME</a>
-          <a class="b active"  href="about.html">ABOUT ME</a>
-          <a class="c"  href="portfolio.html">PORTFOLIO</a>
-          <a class="d"  href="contacts.html">CONTACT ME</a>
-  </div>
-   <div class="contents">
-      <h2> WELCOME<br>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit,<br> sed do eiusmod tempor incididunt<br> ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam,<br> quis nostrud exercitation ullamco <br>laboris nisi ut aliquip ex ea commodo consequat.<br> Duis aute irure dolor in reprehenderit<br> in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br> Excepteur sint occaecat cupidatat non proident,<br> sunt in culpa qui officia deserunt<br> mollit anim id est laborum.
-      </h2>
+
+    <div class="nav">
+    <table>
+      <tr>
+        <td width="12.5%"><a class="a" href="index.html">HOME</a></td>
+        <td width="12.5%"><a class="b active"  href="about.html">ABOUT ME</a></td>
+        <td width="12.5%"><a class="c"  href="skills.html">SKILLS</a></td>
+        <td width="12.5%"><a class="d"  href="portfolio.html">PORTFOLIO</a></td>
+        <td width="12.5%"><a class="e"  href="contacts.html">CONTACTS</a></td>
+      </tr>
+    </table>
+
+    <div class="texts">
+      <h2> GET TO KNOW PHETEHILE MOLEFE...</h2><br><br><h3>Name: Phethehile Molefe<br><br>Date of birth: 10 July 1994<br><br>From: Born and raised in katlehong.<br><br>Then later relocated to Dalpark in 2007<br><br>Interests: sports,movies,coding and dancing.</h3>
+    </div>
+
+
+
+
+
 
 
   <script type="text/javascript">
