--- a/index.html
+++ b/index.html
@@ -5,26 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My HTML Page</title>
   <link rel="stylesheet" type="text/css"  href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 </head>
 <body>
   <div class="background">
-    <div class="logo"><img src="images/FB_IMG_1552678366249.jpg"></div>
-    
+
+
 
     <div class="nav">
-            <a class="a active" href="index.html">HOME</a>
-            <a class="b"  href="about.html">ABOUT ME</a>
-            <a class="c"  href="portfolio.html">PORTFOLIO</a>
-            <a class="d"  href="contacts.html">CONTACT ME</a>
+      <table>
+        <tr>
+          <td width="12.5%"><a class="a active" href="index.html">HOME</a></td>
+          <td width="12.5%"><a class="b"  href="about.html">ABOUT ME</a></td>
+          <td width="12.5%"><a class="c"  href="skills.html">SKILLS</a></td>
+          <td width="12.5%"><a class="d"  href="portfolio.html">PORTFOLIO</a></td>
+          <td width="12.5%"><a class="e"  href="contacts.html">CONTACTS</a></td>
+        </tr>
+      </table>
+
+
     </div>
 
     <div class="contents">
-      <h1> "She is black excellence,<br>she is me.<br>Black without apology""</h1>
+      <h1> PHETHEHILE MOLEFE</h1><br><br><h2>JUNIOR DATA  SCIENTIST</h2>
     </div>
+    <div class="words">
+    <h1>"WHERE THE FUTURE MEETS PRESENT"<h1>
+  </div>
+
+  <div class="icons">
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class=" fab fa-twitter"><i></a>
+    <a herf="#"><i class="fab fa-envelope"><1></a>
   </div>
 
 
-  <script type="text/javascript">;
+  <script type="text/javascript">
+
   </script>
 
 </body>
