--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,18 @@
 </head>
 <body>
   <div class="portfolio">
-      <div class="picture"><img src="images/images8.png"></div>
+
 
   <div class="nav">
-          <a class="a " href="background">HOME</a>
-          <a class="b"  href="about.html">ABOUT ME</a>
-          <a class="c active"  href="portfolio.html">PORTFOLIO</a>
-          <a class="d"  href="contacts.html">CONTACT ME</a>
+    <table>
+      <tr>
+        <td width="12.5%"><a class="a" href="index.html">HOME</a></td>
+        <td width="12.5%"><a class="b"  href="about.html">ABOUT ME</a></td>
+        <td width="12.5%"><a class="c"  href="skills.html">SKILLS</a></td>
+        <td width="12.5%"><a class="d active"  href="portfolio.html">PORTFOLIO</a></td>
+        <td width="12.5%"><a class="e"  href="contacts.html">CONTACTS</a></td>
+      </tr>
+    </table>
   </div>
   </div>
 
