--- a/skills.html
+++ b/skills.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" type="text/css"  href="style.css">
 </head>
 <body>
-  <div class="contacts">
+  <div class="skills">
+
 
 
     <div class="nav">
@@ -15,13 +16,14 @@
         <tr>
           <td width="12.5%"><a class="a" href="index.html">HOME</a></td>
           <td width="12.5%"><a class="b"  href="about.html">ABOUT ME</a></td>
-          <td width="12.5%"><a class="c"  href="skills.html">SKILLS</a></td>
+          <td width="12.5%"><a class="c active"  href="skills.html">SKILLS</a></td>
           <td width="12.5%"><a class="d"  href="portfolio.html">PORTFOLIO</a></td>
-          <td width="12.5%"><a class="e active"  href="contacts.html">CONTACTS</a></td>
+          <td width="12.5%"><a class="e"  href="contacts.html">CONTACTS</a></td>
         </tr>
       </table>
-    </div>
 
+
+    <div class="contents">
 
 
 
