--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 <body>
   <div class="about">
 
+<!-- <img class="images/29.jpg" src=""> -->
 
     <div class="nav">
     <table>
@@ -21,17 +22,15 @@
       </tr>
     </table>
 
-    <div class="texts">
-      <h2> GET TO KNOW PHETEHILE MOLEFE...</h2><br><br><h3>Name: Phethehile Molefe<br><br>Date of birth: 10 July 1994<br><br>From: Born and raised in katlehong.<br><br>Then later relocated to Dalpark in 2007<br><br>Interests: sports,movies,coding and dancing.</h3>
+<div class="photo">
+      <img src="images/29.jpg" alt="" width="300">
+    </div>
+    <div class="amagama">
+      <h2> GET TO KNOW PHETEHILE MOLEFE...</h2><br><br><h3>Name: Phethehile Molefe<br><br>Date of birth:  10 July 1994<br><br>From:  Born and raised in katlehong.<br><br>Future data scientist.<br><br>Currently learning data science at Umuzi.<br><br>Interests:  Sports,Movies,Coding and Dancing.</h3>
     </div>
 
 
-
-
-
-
-
-  <script type="text/javascript">
+<script type="text/javascript">
   </script>
 
 </body>
