--- a/contacts.html
+++ b/contacts.html
@@ -21,10 +21,35 @@
         </tr>
       </table>
     </div>
+    <div class="texts">
+      <h2>Hire me..</h2>
+    </div>
+
+<!--contact-section-->
+        <div class="container">
+    <form action="action_page.php">
+
+      <label for="fname"></label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+      <label for="lname"></label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
 
 
 
+      </select>
+
+      <label for="subject"></label>
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+      <input type="submit" value="Submit">
+
+    </form>
+  </div>
+
+  <div class="lead">
+    <p text-alighn:"center"><font color="white">copyright &copy:2019 |Designed by Phethehile Molefe| all rights reserved</p>
   <script type="text/javascript">;
   </script>
 
