--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   </div>
 
   <div class="icons">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class=" fab fa-twitter"><i></a>
-    <a herf="#"><i class="fab fa-envelope"><1></a>
-  </div>
+    <a href="http://www.facebook.com/phethehile.kaytee"><i class="fab fa-facebook"</a>
+    <a href="#"><i class="fab fa-twitter"</a>
+    <a herf="#"><i class="fas fa-envelope-square"</a>
+</div>
 
 
   <script type="text/javascript">
