--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My HTML Page</title>
   <link rel="stylesheet" type="text/css"  href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 </head>
 <body>
   <div class="portfolio">
+
 
 
   <div class="nav">
@@ -22,6 +24,12 @@
     </table>
   </div>
   </div>
+
+  <div class="icons">
+    <a href="http://www.facebook.com/phethehile.kaytee"><i class="fab fa-facebook"><i></a>
+    <a href="#"><i class=" fab fa-twitter"><i></a>
+    <a herf="#"><i class="fas fa-envelope-square"><i></a>
+</div>
 
 
   <script type="text/javascript">;
