--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My HTML Page</title>
   <link rel="stylesheet" type="text/css"  href="style.css">
-</head>
+
 <body>
   <div class="skills">
 
@@ -23,7 +23,10 @@
       </table>
 
 
-    <div class="contents">
+    <div class="notes">
+      <h1>SKILLS..</h1><br><br><h2>html<br><br>css<br><br>python</h2>
+    </div>
+
 
 
 
