--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   </div>
 
   <div class="icons">
-    <a href="http://www.facebook.com/phethehile.kaytee"><i class="fab fa-facebook"</a>
-    <a href="#"><i class="fab fa-twitter"</a>
-    <a herf="#"><i class="fas fa-envelope-square"</a>
+    <a href="http://www.facebook.com/phethehile.kaytee"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a herf="#"><i class="fas fa-envelope-square"></i></a>
 </div>
 
 
