--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My HTML Page</title>
   <link rel="stylesheet" type="text/css"  href="style.css">
-
 <body>
   <div class="skills">
 
@@ -24,7 +23,7 @@
 
 
     <div class="notes">
-      <h1>SKILLS..</h1><br><br><h2>html<br><br>css<br><br>python</h2>
+      <h1>SKILLS..</h1><br><br><h2>html<br><br>css<br><br>python<br><br>git<br><br>linux</h2>
     </div>
 
 
