--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,9 @@
   </div>
 
   <div class="icons">
-    <a href="http://www.facebook.com/phethehile.kaytee"><i class="fab fa-facebook"><i></a>
-    <a href="#"><i class=" fab fa-twitter"><i></a>
-    <a herf="#"><i class="fas fa-envelope-square"><i></a>
+    <a href="http://www.facebook.com/phethehile.kaytee"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class=" fab fa-twitter"></i></a>
+    <a herf="#"><i class="fas fa-envelope-square"></i></a>
 </div>
 
 
