--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <a href="http://www.facebook.com/phethehile.kaytee"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
     <a herf="#"><i class="fas fa-envelope-square"></i></a>
+    <a herf="https://github.com/"><img src="images/images10.png" width="30px" height="30px" color= purple></i></a> 
 </div>
 
 
